--- a/src/app/user/user.component.scss
+++ b/src/app/user/user.component.scss
@@ -42,10 +42,9 @@
         background:seagreen;
         border: none;
         border-radius: 3px;
-        width: 50px;
+        padding: 5px 10px;
         margin-left: 15px;
         color: white;
-        padding: 4px;
     }
   }
 }
